revision of the navigation block

--- a/vk_com.html
+++ b/vk_com.html
@@ -75,7 +75,7 @@
                     <input class="block4_check_box" type="checkbox">
                     <span class="save_in">Сохранить вход</span>
                     <div class="img_question">
-                        <img src="question.svg">
+                        <img src="question.svg" class="question_nav">
                         <div class="child">
                             <span class="save">Сохранить вход</span> <br>
                             <span class="text">Выберите, чтобы сохранить данные <br>
