distributed in folders

--- a/vk_com.html
+++ b/vk_com.html
@@ -12,7 +12,7 @@
 <div class="header">
     <div class="header_block">
         <a href="#" class="logo_vk">
-        <img src="vk_logo.svg" alt="...">
+        <img src="pictures/vk_logo.svg" alt="...">
         </a>
     </div>
 </div>
@@ -29,28 +29,28 @@
             </div>
             <div class="content1_block2">
                 <a href="#" class="logoMobile1">
-                    <img src="phone1.png" alt="...">
+                    <img src="pictures/phone1.png" alt="...">
                 </a>
                 <a href="#" class="logoMobile2">
-                    <img src="phone2.png" alt="...">
+                    <img src="pictures/phone2.png" alt="...">
                 </a>
             </div>
             <div class="content1_block3">
                 <button class="button" type="button">
                     <a href="#" class="logo_svg">
-                        <img src="google.svg" alt="google">
+                        <img src="pictures/google.svg" alt="google">
                         <span class="button_controller">Google Play</span>
                     </a>
                 </button>
                 <button class="button" type="button">
                     <a href="#" class="logo_svg">
-                        <img src="RuStore.svg" alt="ruStore">
+                        <img src="pictures/RuStore.svg" alt="ruStore">
                         <span class="button_controller">RuStore</span>
                     </a>
                 </button>
                 <button class="button" type="button">
                     <a href="#" class="logo_svg">
-                        <img src="AppStore.svg" alt="appStrore">
+                        <img src="pictures/AppStore.svg" alt="appStrore">
                         <span class="button_controller">App Store</span>
                     </a>
                 </button>
@@ -58,14 +58,14 @@
             <div class="content1_block4">
                 <a href="#" class="products">
                     Все продукты
-                    <img src="sign.svg" alt="..." class="arrow">
+                    <img src="pictures/sign.svg" alt="..." class="arrow">
                 </a>
             </div>
         </div>
         <div class="content2">
             <div class="content2_block1">
                 <div class="block1">
-                    <img src="vk_logo2.svg" alt="...">
+                    <img src="pictures/vk_logo2.svg" alt="...">
                 </div>
                 <div class="block2">
                     <span>Вход ВКонтакте</span>
@@ -75,7 +75,7 @@
                     <input class="block4_check_box" type="checkbox">
                     <span class="save_in">Сохранить вход</span>
                     <div class="img_question">
-                        <img src="question.svg" class="question_nav">
+                        <img src="pictures/question.svg" class="question_nav">
                         <div class="child">
                             <span class="save">Сохранить вход</span> <br>
                             <span class="text">Выберите, чтобы сохранить данные <br>
@@ -88,7 +88,7 @@
                 <div class="block6">
                     <div class="block6_1">
                         <div class="qr_code">
-                            <img src="qr_code.svg">
+                            <img src="pictures/qr_code.svg">
                         </div>
                     </div>
                     <div class="block6_2">
