--- a/vk_com.html
+++ b/vk_com.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>vk.com</title>
-    <link rel="stylesheet" href="vk_com.css">
+    <link rel="stylesheet" href="css/main_css.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
